test/type_inference/negative/type_args2.impala
fn f[A](g: fn(fn(A)->A)->(), a: A) -> () {
}

fn main() -> () {
    f(|x: fn(bool)->int32| -> () {}, true)
}
